tests/neg/parser-stability.scala
class I2[I2] {
          def I2: I2 = (I2 => I2) => I2  // error
// error